chore: update theme

--- a/themes/theme/i18n/hu.yaml
+++ b/themes/theme/i18n/hu.yaml
@@ -67,8 +67,7 @@ search:
 
 footer:
     builtWith:
-        other: Copyright © 2019-2023 <a href="https://kirklin.cn" target="_blank" rel="noopener">Kirk Lin</a> All Rights Reserved. <a href="https://kirklin.cn" target="_blank" rel="noopener">Kirk Lin</a> 版权所有
+        other: "{{ .Generator }} használatával készült"
 
     designedBy:
-        other: <a href="https://beian.miit.gov.cn/" target="_blank" rel="noopener">闽ICP备2021016459号-1</a>
-
+        other: A {{ .Theme }} dizájnt {{ .DesignedBy }} tervezte
