--- a/themes/theme/i18n/ru.yaml
+++ b/themes/theme/i18n/ru.yaml
@@ -58,8 +58,6 @@ search:
 
 footer:
     builtWith:
-        other: Copyright © 2019-2023 <a href="https://kirklin.cn" target="_blank" rel="noopener">Kirk Lin</a> All Rights Reserved. <a href="https://kirklin.cn" target="_blank" rel="noopener">Kirk Lin</a> 版权所有
-
+        other: Создано при помощи {{ .Generator }}
     designedBy:
-        other: <a href="https://beian.miit.gov.cn/" target="_blank" rel="noopener">闽ICP备2021016459号-1</a>
-
+        other: Тема {{ .Theme }}, дизайн {{ .DesignedBy }}
