--- a/themes/theme/i18n/ar.yaml
+++ b/themes/theme/i18n/ar.yaml
@@ -51,6 +51,10 @@ widget:
     tagCloud:
         title:
             other: وسوم
+            
+    categoriesCloud:
+        title:
+            other: التصنيفات
 
 search:
     title:
@@ -64,8 +68,7 @@ search:
 
 footer:
     builtWith:
-        other: Copyright © 2019-2023 <a href="https://kirklin.cn" target="_blank" rel="noopener">Kirk Lin</a> All Rights Reserved. <a href="https://kirklin.cn" target="_blank" rel="noopener">Kirk Lin</a> 版权所有
-
+        other: "مبني باستخدام {{ .Generator }}"
+        
     designedBy:
-        other: <a href="https://beian.miit.gov.cn/" target="_blank" rel="noopener">闽ICP备2021016459号-1</a>
-
+        other:  "قالب {{ .Theme }} مصمم من {{ .DesignedBy }}"
