--- a/themes/theme/i18n/en.yaml
+++ b/themes/theme/i18n/en.yaml
@@ -67,8 +67,7 @@ search:
 
 footer:
     builtWith:
-        other: Copyright © 2019-2023 <a href="https://kirklin.cn" target="_blank" rel="noopener">Kirk Lin</a> All Rights Reserved. <a href="https://kirklin.cn" target="_blank" rel="noopener">Kirk Lin</a> 版权所有
+        other: Built with {{ .Generator }}
 
     designedBy:
-        other: <a href="https://beian.miit.gov.cn/" target="_blank" rel="noopener">闽ICP备2021016459号-1</a>
-
+        other: Theme {{ .Theme }} designed by {{ .DesignedBy }}
