--- a/themes/theme/i18n/es.yaml
+++ b/themes/theme/i18n/es.yaml
@@ -1,5 +1,5 @@
 toggleMenu:
-    other: Toggle Menu
+    other: Ocultar menú
 
 darkMode:
     other: Modo oscuro
@@ -27,11 +27,11 @@ article:
         other: Contenidos relacionados
 
     lastUpdatedOn:
-        other: Última vez actualizado
+        other: Última actualización
 
     readingTime:
-        one: "{{ .Count }} minuto a leer"
-        other: "{{ .Count }} minutos a leer"
+        one: "Tiempo de lectura {{ .Count }} minuto"
+        other: "Tiempo de lectura {{ .Count }} minutos"
 
 notFound:
     title:
@@ -60,15 +60,14 @@ search:
         other: Búsqueda
 
     placeholder:
-        other: Teclea algo...
+        other: Escribe algo...
 
     resultTitle:
         other: "#PAGES_COUNT páginas en (#TIME_SECONDS segundos)"
 
 footer:
     builtWith:
-        other: Copyright © 2019-2023 <a href="https://kirklin.cn" target="_blank" rel="noopener">Kirk Lin</a> All Rights Reserved. <a href="https://kirklin.cn" target="_blank" rel="noopener">Kirk Lin</a> 版权所有
+        other: Creado con {{ .Generator }}
 
     designedBy:
-        other: <a href="https://beian.miit.gov.cn/" target="_blank" rel="noopener">闽ICP备2021016459号-1</a>
-
+        other: Tema {{ .Theme }} diseñado por {{ .DesignedBy }}
