--- a/themes/theme/i18n/fr.yaml
+++ b/themes/theme/i18n/fr.yaml
@@ -50,6 +50,9 @@ widget:
     tagCloud:
         title:
             other: Mots clés
+    categoriesCloud:
+        title:
+            other: Catégories
 
 search:
     title:
@@ -63,8 +66,7 @@ search:
 
 footer:
     builtWith:
-        other: Copyright © 2019-2023 <a href="https://kirklin.cn" target="_blank" rel="noopener">Kirk Lin</a> All Rights Reserved. <a href="https://kirklin.cn" target="_blank" rel="noopener">Kirk Lin</a> 版权所有
+        other: Généré avec {{ .Generator }}
 
     designedBy:
-        other: <a href="https://beian.miit.gov.cn/" target="_blank" rel="noopener">闽ICP备2021016459号-1</a>
-
+        other: Thème {{ .Theme }} conçu par {{ .DesignedBy }}
