--- a/themes/theme/i18n/ja.yaml
+++ b/themes/theme/i18n/ja.yaml
@@ -4,6 +4,16 @@ toggleMenu:
 darkMode:
     other: ダークモード
 
+list:
+    page:
+        other: "{{ .Count }} ページ目"
+
+    section:
+        other: セクション
+
+    subsection:
+        other: サブセクション
+
 article:
     back:
         other: 前のページ
@@ -54,8 +64,7 @@ search:
 
 footer:
     builtWith:
-        other: Copyright © 2019-2023 <a href="https://kirklin.cn" target="_blank" rel="noopener">Kirk Lin</a> All Rights Reserved. <a href="https://kirklin.cn" target="_blank" rel="noopener">Kirk Lin</a> 版权所有
+        other: "{{ .Generator }} で構築されています。"
 
     designedBy:
-        other: <a href="https://beian.miit.gov.cn/" target="_blank" rel="noopener">闽ICP备2021016459号-1</a>
-
+        other: テーマ {{ .Theme }} は {{ .DesignedBy }} によって設計されています。
