--- a/themes/theme/i18n/nl.yaml
+++ b/themes/theme/i18n/nl.yaml
@@ -21,6 +21,8 @@ article:
         other: Gerelateerde inhoud
     lastUpdatedOn:
         other: Laatst bijgewerkt op
+    readingTime:
+        other: "{{ .Count }} leestijd"
 
 notFound:
     title:
@@ -52,8 +54,6 @@ search:
 
 footer:
     builtWith:
-        other: Copyright © 2019-2023 <a href="https://kirklin.cn" target="_blank" rel="noopener">Kirk Lin</a> All Rights Reserved. <a href="https://kirklin.cn" target="_blank" rel="noopener">Kirk Lin</a> 版权所有
-
+        other: Gemaakt met {{ .Generator }}
     designedBy:
-        other: <a href="https://beian.miit.gov.cn/" target="_blank" rel="noopener">闽ICP备2021016459号-1</a>
-
+        other: Theme {{ .Theme }} ontworpen door {{ .DesignedBy }}
