--- a/themes/theme/i18n/pl.yaml
+++ b/themes/theme/i18n/pl.yaml
@@ -7,6 +7,8 @@ darkMode:
 list:
     page:
         one: "{{ .Count }} strona"
+        few: "{{ .Count }} strony"
+        many: "{{ .Count }} stron"
         other: "{{ .Count }} stron"
 
     section:
@@ -14,7 +16,9 @@ list:
 
     subsection:
         one: Podsekcja
-        other: Podsekcje
+        few: Podsekcje
+        many: Podsekcji
+        other: Podsekcji
 
 article:
     back:
@@ -28,9 +32,11 @@ article:
 
     lastUpdatedOn:
         other: Ostatnio zaktualizowany
-    
+
     readingTime:
         one: "Przeczytasz w {{ .Count }} minutę"
+        few: "Przeczytasz w {{ .Count }} minuty"
+        many: "Przeczytasz w {{ .Count }} minut"
         other: "Przeczytasz w {{ .Count }} minut"
 
 notFound:
@@ -50,7 +56,7 @@ widget:
     tagCloud:
         title:
             other: Tagi
-    
+
     categoriesCloud:
         title:
             other: Kategorie
@@ -63,12 +69,14 @@ search:
         other: Wpisz coś...
 
     resultTitle:
+        one: "#PAGES_COUNT strona (#TIME_SECONDS sekund)"
+        few: "#PAGES_COUNT strony (#TIME_SECONDS sekund)"
+        many: "#PAGES_COUNT stron (#TIME_SECONDS sekund)"
         other: "#PAGES_COUNT stron (#TIME_SECONDS sekund)"
 
 footer:
     builtWith:
-        other: Copyright © 2019-2023 <a href="https://kirklin.cn" target="_blank" rel="noopener">Kirk Lin</a> All Rights Reserved. <a href="https://kirklin.cn" target="_blank" rel="noopener">Kirk Lin</a> 版权所有
+        other: Zbudowano z {{ .Generator }}
 
     designedBy:
-        other: <a href="https://beian.miit.gov.cn/" target="_blank" rel="noopener">闽ICP备2021016459号-1</a>
-
+        other: Motyw {{ .Theme }} zaprojektowany przez {{ .DesignedBy }}
