--- a/themes/theme/i18n/zh-tw.yaml
+++ b/themes/theme/i18n/zh-tw.yaml
@@ -4,6 +4,18 @@ toggleMenu:
 darkMode:
     other: 夜晚模式
 
+list:
+    page:
+        one: "第 {{ .Count }} 頁"
+        other: "第 {{ .Count }} 頁"
+
+    section:
+        other: 段落
+
+    subsection:
+        one: 小節
+        other: 小節
+
 article:
     back:
         other: 返回
@@ -18,11 +30,13 @@ article:
         other: 最後更新
 
     readingTime:
+        one: "閱讀時間: {{ .Count }} 分鐘"
         other: "閱讀時間: {{ .Count }} 分鐘"
 
 notFound:
     title:
         other: 404 錯誤
+
     subtitle:
         other: 頁面不存在
 
@@ -37,6 +51,9 @@ widget:
     tagCloud:
         title:
             other: 標籤雲
+    categoriesCloud:
+        title:
+            other: 分類
 
 search:
     title:
@@ -50,9 +67,7 @@ search:
 
 footer:
     builtWith:
-        other: Copyright © 2019-2023 <a href="https://kirklin.cn" target="_blank" rel="noopener">Kirk Lin</a> All Rights Reserved. <a href="https://kirklin.cn" target="_blank" rel="noopener">Kirk Lin</a> 版权所有
+        other: 使用 {{ .Generator }} 建立
 
     designedBy:
-        other: <a href="https://beian.miit.gov.cn/" target="_blank" rel="noopener">闽ICP备2021016459号-1</a>
-
-       
+        other: 主題 {{ .Theme }} 由 {{ .DesignedBy }} 設計
